<package>
  <name>realtime_urdf_filter</name>
  <version>0.1.0</version>
  <description>realtime_urdf_filter</description>
  <maintainer email="jbo@jhu.edu">Jonathan Bohren</maintainer>
  <maintainer email="todo@todo.com">Nico Blodow</maintainer>
  <author>Nico Blodow</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>urdf</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>openni</build_depend>
  <build_depend>resource_retriever</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>urdfdom_headers</build_depend>
  <build_depend>moveit_ros_perception</build_depend>

  <run_depend>urdf</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>openni</run_depend>
  <run_depend>resource_retriever</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>urdf_model</run_depend>

  <build_depend>libglew1.6"</build_depend>
  <build_depend>libglew1.6-dev"</build_depend>

  <export>
    <nodelet plugin="${prefix}/plugins/nodelet_plugins.xml" />
    <moveit_ros_perception plugin="${prefix}/moveit_ros_perception_plugins.xml"/>
  </export>

</package>


